--- a/style.css
+++ b/style.css
@@ -3,18 +3,18 @@ html {
   font-size: 13px;
 }
 
-h1 {
+.heading {
   font-size: 17px;
   font-weight: bold;
   margin: 0;
 }
 
-h2 {
+.heading--text {
   font-size: 15px;
   font-weight: lighter;
   margin: 1em 0;
 }
 
-a {
+.link {
   color: green;
 }
